<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Team Standing Stats Header -->
    <LinearLayout
        android:id="@+id/standings_fragment_standings_header_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@id/header_divider"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/standings_fragment_team_info_linear_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.75"
            android:gravity="center">

            <TextView
                android:id="@+id/standings_fragment_club_header_info_tv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/standing_header_club_name"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/standings_fragment_team_stats_header_linear_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/standings_fragment_team_points_header_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/standing_header_club_points"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/standings_fragment_matches_played_header_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/standing_header_club_matches_played"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/standings_fragment_matches_won_header_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/standing_header_club_matches_win"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/standings_fragment_matches_drawn_header_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:text="@string/standing_header_club_matches_drawn"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/standings_fragment_matches_lost_header_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/standing_header_club_matches_lost"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/standings_fragment_goals_for_header_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/standing_header_goals_scored_for_club"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/standings_fragment_goals_against_header_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/standing_header_goals_scored_against_club"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/standings_fragment_goal_difference_header_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/standing_header_club_goal_difference"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <!-- Team Standing Stats Header Divider -->
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/header_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/standings_fragment_standings_header_linear_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>

