<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standings_color_meanings_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="64dp"
    android:background="@drawable/standings_table_colors_meanings_bg"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:background="@color/champions_league_group_stage_qualified_teams_divider_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/champions_league_group_stage_qualification_color_desc"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:background="@color/champions_league_qualifiers_teams_divider_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/champions_league_qualifiers_color_desc"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:background="@color/europa_league_group_stage_qualified_teams_divider_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/europa_league_group_stage_qualification_color_desc"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        app:dividerColor="@color/default_divider_color"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:background="@color/europa_conference_league_qualifiers_teams_divider_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/europa_conference_league_qualifiers_color_desc"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:background="@color/league_relegation_play_offs_teams_divider_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relegation_play_offs_color_desc"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:background="@color/league_relegation_teams_divider_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relegation_color_desc"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>